# KEX-tracer

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  EBO.cpp  EBO.h  Graphics.h  KEX-tracer.sln  KEX-tracer.vcxproj  KEX-tracer.vcxproj.filters  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Texture3D.cpp  Texture3D.h  VBO.cpp  VBO.h  Voxel_Cone_Tracing.cpp  Voxel_Cone_Tracing.h  Voxelization.cpp  Voxelization.h  Voxelizer.cpp  Voxelizer.h  default.frag  default.vert  glad.c  normals.frag  pointlight.h  shaderClass.cpp  shaderClass.h  stb.cpp  voxel.frag  (+2 more)
Libraries/include/glad/: glad.c  glad.h
Libraries/lib/: glfw3.lib
Shaders/: OldVoxelVisualization.frag  OldVoxelVisualization.vert  RayMarchingDemo.frag  SaveAdditionalBounce.frag  StoreTextureData.comp  Thief.frag  Thief.vert  Voxel_Cone_Tracing.frag  Voxel_Cone_Tracing.vert  default.frag  default.geom  default.vert  directLightVoxel.frag  lightBounces.comp  normal.frag  normal.geom  normals.frag  renderVoxels.frag  renderVoxels.geom  renderVoxels.vert  shadowMap.frag  shadowMap.vert  shadowMapDebug.frag  shadowMapDebug.vert  test.frag  voxel.cs  voxel.frag  voxel.geom  voxel.vert  voxelTesting.frag  voxelTesting.geom  voxelTesting.vert  voxelization.frag  voxelization.geom  voxelization.vert  voxelizationStart.frag
src/: Application.cpp  Application.h  EBO.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  VAO.h  glad.c  shaderClass.cpp  shaderClass.h
x64/Debug/: KEX-tracer.exe.recipe  KEX-tracer.ilk  KEX-tracer.vcxproj.FileListAbsolute.txt  vc143.idb
(+8 files in other folders)
